--- a/publish.gradle
+++ b/publish.gradle
@@ -7,14 +7,14 @@
 		
 	}
 	
-	java {
+	/*java {
 		
 		sourceCompatibility = JavaVersion.VERSION_1_8
 		targetCompatibility = JavaVersion.VERSION_1_8
 		withJavadocJar ()
 		withSourcesJar ()
 		
-	}
+	}*/
 	
 	group publishedGroupId
 	archivesBaseName = artifactId
