--- a/publish.gradle
+++ b/publish.gradle
@@ -1,153 +1,104 @@
-	plugins {
-		
-		id 'java'
-		id 'com.android.application'
-		id 'maven-publish'
-		id 'signing'
-		
-	}
-	
-	java {
-		
-		sourceCompatibility = JavaVersion.VERSION_1_8
-		targetCompatibility = JavaVersion.VERSION_1_8
-		withJavadocJar ()
-		withSourcesJar ()
-		
-	}
-	
-	group publishedGroupId
-	archivesBaseName = artifactId
-	version = libraryVersion
-	
-	repositories {
-		mavenCentral ()
-	}
-	
-	dependencies {
-		
-		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
-		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
-		
-	}
-	
-	test {
-		useJUnitPlatform ()
-	}
-	
-	jar {
-		
-		from sourceSets.main.output
-		from sourceSets.main.allJava
-		
-	}
-	
-	signing {
-		sign publishing.publications
-	}
-	
-	publishing {
-		
-		publications {
-			
-			mavenJava (MavenPublication) {
-				
-				customizePom (pom)
-				
-				groupId group
-				artifactId archivesBaseName
-				version version
-				
-				from components.java
-				
-			}
-			
-		}
-		
-		repositories {
-			
-			maven {
-				
-				url 'https://oss.sonatype.org/service/local/staging/deploy/maven2'
-				
-				credentials {
-					
-					username username
-					password password
-					
-				}
-				
-			}
-			
-		}
-		
-	}
-	
-	def customizePom (pom) {
-		
-		pom.withXml {
-			
-			def root = asNode ()
-			
-			root.dependencies.removeAll { dep ->
-				dep.scope == 'test'
-			}
-			
-			root.children ().last () + {
-				
-				resolveStrategy = DELEGATE_FIRST
-				
-				name libraryName
-				description libraryDescription
-				url siteUrl
-				
-				organization {
-					
-					name developerName
-					url siteUrl
-					
-				}
-				
-				issueManagement {
-					
-					system 'GitHub'
-					url issuesUrl
-					
-				}
-				
-				licenses {
-					
-					license {
-						
-						name licenseName
-						url licenseUrl
-						
-					}
-					
-				}
-				
-				scm {
-					
-					url siteUrl
-					connection 'scm:' + siteUrl
-					developerConnection 'scm:' + gitUrl
-					
-				}
-				
-				developers {
-					
-					developer {
-						
-						id username
-						name developerName
-						email developerEmail
-						
-					}
-					
-				}
-				
-			}
-			
-		}
-		
-	}
+plugins {
+    id 'java'
+    id 'maven-publish'
+    id 'signing'
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+    withJavadocJar()
+    withSourcesJar()
+}
+
+group 'io.github.githublogin'
+archivesBaseName = 'projectname'
+version = System.getenv('RELEASE_VERSION') ?: "0.0.1"
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
+}
+
+test {
+    useJUnitPlatform()
+}
+
+jar {
+    from sourceSets.main.output
+    from sourceSets.main.allJava
+}
+
+signing {
+    sign publishing.publications
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            customizePom(pom)
+            groupId group
+            artifactId archivesBaseName
+            version version
+
+            from components.java
+        }
+    }
+    repositories {
+        maven {
+            url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+            credentials {
+                username sonatypeUsername
+                password sonatypePassword
+            }
+        }
+    }
+}
+
+def customizePom(pom) {
+    pom.withXml {
+        def root = asNode()
+
+        root.dependencies.removeAll { dep ->
+            dep.scope == "test"
+        }
+
+        root.children().last() + {
+            resolveStrategy = DELEGATE_FIRST
+
+            description 'Some description of artifact'
+            name 'Artifct name'
+            url 'https://github.com/login/projectname'
+            organization {
+                name 'com.github.login'
+                url 'https://github.com/githublogin'
+            }
+            issueManagement {
+                system 'GitHub'
+                url 'https://github.com/githublogin/projectname/issues'
+            }
+            licenses {
+                license {
+                    name 'The Apache License, Version 2.0'
+                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                }
+            }
+            scm {
+                url 'https://github.com/githublogin/projectname'
+                connection 'scm:https://github.com/githublogin/projectname.git'
+                developerConnection 'scm:git://github.com/githublogin/projectname.git'
+            }
+            developers {
+                developer {
+                    id 'dev'
+                    name 'DevName'
+                    email 'email@dev.ru'
+                }
+            }
+        }
+    }
+}
